# 42sh---Bash-posix-shell

./: .gitignore  CMakeLists.txt  README.md  a.out  ast.c  ast.h  commands.h  lexer.c  main.c  parser.c  parser.h
ast/: ast.c  ast.h  list.c  list.h  print_ast.c
built_in/: boolean.c  echo.c
exec/: exec.c  exec.h
lexer/: lexer.c  lexer.h
parse_command_line/: parse_command_line.h
parser/: parse_command.c  parse_input.c  parse_list.c  parse_shell_command.c  parse_simple_commande.c  parser.c  parser.h
src/: main.c  run_program.c  run_program.h
src/ast/: CMakeLists.txt  ast.c  ast.h  list.c  list.h  print_ast.c  print_ast.h  variable.c  variable.h
src/built_in/: CMakeLists.txt  boolean.c  built_in.h  cd.c  dot.c  echo.c  exit.c  unset.c
src/exec/: CMakeLists.txt  exec.c  exec.h
src/expansion/: CMakeLists.txt  expansion.c  expansion.h
src/lexer/: CMakeLists.txt  lexer.c  lexer.h  lexer_lib.c  lexer_load.c  lexer_tools.c
src/others/: CMakeLists.txt  hash_map.c  hash_map.h  return_code.h  tools.c  tools.h
src/parse_command_line/: parse_command_line.c  parse_command_line.h
src/parser/: CMakeLists.txt  parse_command.c  parse_command_line.c  parse_compound_list.c  parse_func.c  parse_input.c  parse_list.c  parse_prefix.c  parse_redirection.c  parse_rule_elif.c  parse_rule_else.c  parse_rule_if.c  parse_rule_while.c  parse_rule_wu.c  parse_shell_command.c  parse_simple_commande.c  parser.c  parser.h
src/redirection/: CMakeLists.txt  redirection.c  redirection.h
test/: data.yml  test_suite.py
test/test_input/: echo_c.in
tests/: Makefile  Tests.c  Tests_redirection.c  check  create_test.py  data.yml  file2  gdb_test.in  log  test_suite.py
tests/42trash/: double  simple2
tests/42trash_criterion/: ls_l_output.in  output_echo1.in  output_echo2.in
tests/For/: for_simple.in
tests/cd/: cd-basic.in  cd-simple.in  cd.in  cd_basic.in  cd_canon.in  cd_non_existentchild.in  cd_nonexistant.in  cd_nonexistant2.in  cd_parent.in  cd_subdir.in
tests/comment/: comment_just_a_comment.in  comment_not_first.in  comment_quoted.in  comment_space.in
tests/dot_builtin/: dot_simple.in  file_non_existant.in  simple2.in
tests/echo/: builtins_echo_E.in  builtins_echo_E_backslash1.in  builtins_echo_bad_option1.in  builtins_echo_big_arg.in  builtins_echo_e.in  builtins_echo_eEe.in  builtins_echo_e_backslash1.in  builtins_echo_many_args.in  builtins_echo_many_e_E1.in
tests/edge_case/: erreur_continue.in  special_test.in
tests/exit/: exit_4000.in  exit_string.in  exit_to_many_args.in
tests/if/: if_cp_list_multiline.in  if_true.in
tests/redirection/: bad_beginning_ampersand.in  bad_ending_append_redirection.in  bad_ending_clobber.in  bad_ending_greatand.in  bad_ending_input_redirection.in  clobber.in  (+26 more)
(+93 files in other folders)
